# XperiBot

./: .gitignore  README.md  build_package.sh  example.py  setup.cfg
src/: example.py
