[metadata]
name = Xperibot
version = 0.0.1
author = Marco Formoso
description = Telegram Bot for monitoring ML experiments
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    matplotlib
    python-telegram-bot
[options.packages.find]
where = src